--- a/Tutorial_NewMember.ipynb
+++ b/Tutorial_NewMember.ipynb
@@ -81,6 +81,13 @@
     "**Check updates of your git folder:** \\\n",
     "git fetch origin \\\n",
     "alias graph='git log --all --decorate --oneline --graph' \\\n",
+    "graph\n",
+    "\n",
+    "**Synchronize git local folder with remote folder on GitHub:** \\\n",
+    "git add new-file-name \\\n",
+    "git commit -m \"message to explain commit\" \\\n",
+    "graph \\\n",
+    "git push origin main \\\n",
     "graph\n"
    ]
   },
