update tuto zith new commands

--- a/Tutorial_NewMember.ipynb
+++ b/Tutorial_NewMember.ipynb
@@ -84,7 +84,7 @@
     "graph\n",
     "\n",
     "**Synchronize git local folder with remote folder on GitHub:** \\\n",
-    "git add new-file-name \\\n",
+    "git add * \\\n",
     "git commit -m \"message to explain commit\" \\\n",
     "graph \\\n",
     "git push origin main \\\n",
