Add codes in bash and an image in Tutorial-1

--- a/Tutorial_NewMember.ipynb
+++ b/Tutorial_NewMember.ipynb
@@ -5,18 +5,35 @@
    "id": "1cc690c7-d513-4d41-a190-d5ff49d5bdc1",
    "metadata": {},
    "source": [
-    "# How to: Set up everything as a new member of Neuro-iX\n",
+    "# How to: Set up required tools as a new member of Neuro-iX\n",
     "\n",
     "**Learning outcomes**\n",
     "\n",
-    "1. Website Neuro-iX.github.io\n",
-    "2. New account to access Narval's compute nodes \\\n",
-    "    a) Create an account on Digital Research Aliance of Canada \\\n",
-    "    b) Install and configure Putty/MobalXterm for connexion to Narval \\\n",
-    "    c) Basic commands example\n",
-    "3. Setup Git and Jupyterlab on your laptop \\\n",
-    "    a) Installation and configuration of git\n",
-    "5. Setup a virtual machine on your laptop"
+    "0. [MonETS account: Multifactor authentication and VPN setup](#section0)\n",
+    "1. [Help updating Neuro-iX.github.io with your information](#section1)\n",
+    "2. [New account to access Narval's compute nodes](#section2) \\\n",
+    "    a) [Create an account on Digital Research Aliance of Canada](#section2_a) \\\n",
+    "    b) [Install and configure Putty/MobalXterm for connexion to Narval](#section2_b) \\\n",
+    "    c) [Basic commands example](#section2_c)\n",
+    "3. [Setup Git and Jupyterlab on your laptop](#section3) \\\n",
+    "    a) [Installation and configuration of git](#section3_a)\n",
+    "4. [Setup a virtual machine on your laptop](#section4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be524736-3944-4376-b03c-6b85ffb0eb3e",
+   "metadata": {},
+   "source": [
+    "<a id='section0'></a>\n",
+    "## 0. MonETS account: Multifactor authentication and VPN setup\n",
+    "\n",
+    "- **See the documentation for multifactor authentication:** \\\n",
+    "https://portail.etsmtl.ca/\n",
+    "\n",
+    "- **See the documentation for the VPN:** \\\n",
+    "https://www.etsmtl.ca/services/sti/catalogue-de-services/reseau/etablir-connexion-vpn?lang=en-ca\n",
+    "\n"
    ]
   },
   {
@@ -24,12 +41,13 @@
    "id": "9f94af8c-5dce-4327-9580-793e7aaecc22",
    "metadata": {},
    "source": [
-    "## 1. Website Neuro-iX.github.io\n",
+    "<a id='section1'></a>\n",
+    "## 1. Help updating Neuro-iX.github.io with your information\n",
     "\n",
-    "**Visit our website:** \\\n",
+    "- **Visit our website:** \\\n",
     "https://neuro-ix.github.io\n",
     "\n",
-    "**Complete this Google Form for updating the website with your professionnal information:**  \\\n",
+    "- **Complete this Google Form for updating the website with your professionnal information:**  \\\n",
     "https://forms.gle/ED53rp24KYCZtMYu7"
    ]
   },
@@ -38,31 +56,66 @@
    "id": "3877d880-4c49-4093-9b69-3cdfe6462132",
    "metadata": {},
    "source": [
+    "<a id='section2'></a>\n",
     "## 2. New account to access Narval's compute nodes\n",
-    "### a) Create an account on Digital Research Aliance of Canada (DRAC)\n",
+    "<a id='section2_a'></a>\n",
+    "### a) Create an account on Compute Canada Database (CCDB)\n",
     "\n",
-    "Ask Sylvain Bouix to create a new account for you, follow the instrcutions and connect here:\n",
+    "Send **Sylvain Bouix** an email at **sylvain.bouix@etsmtl.ca** to ask for his CCRI number on his CCDB account.\n",
+    "\n",
+    "**Register on CCDB:** \\\n",
     "https://ccdb.alliancecan.ca/security/login\n",
     "\n",
-    "### b) Install and configure Putty/MobalXterm for connexion to Narval\n",
+    "Ask **Sylvain Bouix** to validate your new account.\n",
     "\n",
-    "**Follow the instructions here to set up a ssh key for your account:** \\\n",
-    "https://docs.alliancecan.ca/wiki/SSH_Keys#Using_CCDB \\\n",
-    "Generate key using ssh-keygen cmd\n",
+    "<a id='section2_b'></a>\n",
+    "### b) Configure your ssh connexion to Narval cluster \n",
     "\n",
-    "If you are on Windows, you can use **MobaXterm**. Putty if on Linux or Windows.\n",
-    "https://mobaxterm.mobatek.net/download-home-edition.html\n",
+    "- **Follow the instructions here to set up a ssh key for your CCDB account:** \\\n",
+    "https://docs.alliancecan.ca/wiki/SSH_Keys\n",
     "\n",
-    "**To create a new session on narval:** \\\n",
-    "remote host: narval.calculcanada.ca \\\n",
-    "username: \"username-on-DRAC\" \\\n",
-    "advanced ssh settings -> private key\n",
+    "- **Protect your ssh keys and activate your private key (not .pub):** \n",
+    "```bash\n",
+    "chmod 700 ~/.ssh -R\n",
+    "ls -la ~/.ssh\n",
+    "eval $(ssh-agent -s)\n",
+    "ssh-add ~/.ssh/PrivateKey\n",
+    "```\n",
+    "- **Install a toolbox for remote computing:**  \\\n",
+    "If your on Windows, you can install [**MobaXterm**](https://mobaxterm.mobatek.net/download-home-edition.html).  \\\n",
+    "If not, you may install a Windows [virtual machine](#section4). \\\n",
+    "Alternatively, use a terminal or other toolboxes for remote computing like **Putty** (Windows/Linux), \\\n",
+    "**Royal TSX** (Windows/macOS) or **OpenSSH** (Windows/Linux/macOS).\n",
     "\n",
+    "- **Create a new session on MobaXterm:**\n",
+    "![Configuration of new session on MobaXterm](mobaxterm_ConfigSessionNarval.png)\n",
+    "In Sessions -> New session: \\\n",
+    "The remote host is **narval.calculcanada.ca**. \\\n",
+    "Use your CCDB username and select your private ssh key file.\n",
+    "\n",
+    "<a id='section2_c'></a>\n",
     "### c) Basic commands example\n",
     "\n",
-    "**Launch interactive jobs:** \\\n",
-    "salloc --x11  -n 4 --mem-per-cpu=4000 --account=def-sbouix \\\n",
-    "**Documentation:** https://docs.alliancecan.ca/wiki/Running_jobs"
+    "- **List all the modules that can be loaded, and load a specific version:**\n",
+    "```bash\n",
+    "module spider\n",
+    "module load freesurfer/5.3.0\n",
+    "```\n",
+    "**Documentation:** https://lmod.readthedocs.io/en/latest/135_module_spider.html\n",
+    "\n",
+    "- **Launch interactive jobs:**\n",
+    "```bash\n",
+    "salloc --x11  -n 4 --mem-per-cpu=4000 --account=def-sbouix\n",
+    "```\n",
+    "**Documentation:** https://docs.alliancecan.ca/wiki/Running_jobs\n",
+    "\n",
+    "- **Execute a bash script, determine the status of the job, and display the output file:**\n",
+    "```bash\n",
+    "sbatch simple_job.sh --output=outputfilename.out --time=00:30:00 --account=def-sbouix\n",
+    "sq\n",
+    "cat outputfilename.out\n",
+    "```\n",
+    "**Documentation:** https://docs.alliancecan.ca/wiki/What_is_a_scheduler%3F"
    ]
   },
   {
@@ -70,25 +123,90 @@
    "id": "37d0971e-0a67-499d-b194-3d630dedabfe",
    "metadata": {},
    "source": [
-    "## 3. Setup Git and Jupyterlab on your laptop\n",
+    "<a id='section3'></a>\n",
+    "## 3. Setup Miniconda, Git, Datalad and Jupyterlab on your laptop\n",
+    "<a id='section3_a'></a>\n",
+    "### a) Install Miniconda, Git, Datalad and Jupyterlab\n",
+    "- **Install Miniconda depending on your OS:**  \\\n",
+    "https://docs.conda.io/en/latest/miniconda.html\n",
     "\n",
-    "### a) Installation and configuration of git\n",
+    "- **Install Git depending on your OS:**  \\\n",
+    "https://github.com/git-guides/install-git \\\n",
+    "Or simply with Miniconda:\n",
+    "```bash\n",
+    "conda install -c conda-forge git\n",
+    "```\n",
     "\n",
-    "**In a powershell or terminal, activate your ssh key:** \\\n",
-    "eval $(ssh-agent -s) \\\n",
-    "ssh-add ~/.ssh/mykey\n",
+    "- **Install Datalad depending on your OS:**  \\\n",
+    "https://handbook.datalad.org/en/latest/intro/installation.html# \\\n",
+    "Or simply with Miniconda:\n",
+    "```bash\n",
+    "conda install -c conda-forge datalad\n",
+    "```\n",
     "\n",
-    "**Check updates of your git folder:** \\\n",
-    "git fetch origin \\\n",
-    "alias graph='git log --all --decorate --oneline --graph' \\\n",
+    "- **Install Juperterlab depending on your OS:**  \\\n",
+    "https://jupyterlab.readthedocs.io/en/stable/getting_started/installation.html \\\n",
+    "Or simply with Miniconda:\n",
+    "```bash\n",
+    "conda install -c conda-forge jupyterlab\n",
+    "```\n",
+    "\n",
+    "<a id='section3_b'></a>\n",
+    "### b) Basic commands of Git/Datalad in bash\n",
+    "- **Configure data version control in a new directory:** \n",
+    "```bash\n",
+    "datalad create -c text2git /path/new-dataset\n",
+    "cd /path/new-dataset\n",
+    "tree\n",
+    "```\n",
+    "\n",
+    "- **Update dataset locally:** \n",
+    "```bash\n",
+    "datalad status\n",
+    "datalad save -m \"Explain changes\"\n",
+    "```\n",
+    "\n",
+    "- **Example of how you should launch a command in dataset:** \n",
+    "```bash\n",
+    "datalad run \\\n",
+    "-i surf/rh.orig -i autodet-new.gw.stats.rh.dat -i brainsupermasked.mgz -i mri/aseg.presurf.mgz -i wmsupermasked.mgz \\\n",
+    "-o rh.ribbon_masked.pial \\\n",
+    "-m \"Apply command mris_place_surface from Freesurfer 7.4.1\" \\\n",
+    "mris_place_surface --i {inputs[0]} --o {outputs} --nsmooth 1 --adgws-in {inputs[1]} --pial --rh --repulse-surf {inputs[0]} --invol {inputs[2]} --seg {inputs[3]} --threads 6 --wm {inputs[4]} --white-surf {inputs[0]}\n",
+    "```\n",
+    "\n",
+    "- **On Linux, check the previous commands:** \n",
+    "```bash\n",
+    "tig\n",
+    "```\n",
+    "\n",
+    "- **Clone a GitHub repository locally:** \n",
+    "```bash\n",
+    "git clone git@github.com:Neuro-iX/Neuro-iX.github.io.git\n",
+    "cd Neuro-iX.github.io\n",
+    "git config --global user.name \"GithubUsername\"\n",
+    "git config --global user.email \"GithubEmailAddress\"\n",
+    "git config --local user.name \"GithubUsername\"\n",
+    "git config --local user.email \"GithubEmailAddress\"\n",
+    "```\n",
+    "\n",
+    "- **Check if updates on GitHub repository and merge it on your local repository:** \n",
+    "```bash\n",
+    "git fetch origin\n",
+    "alias graph='git log --all --decorate --oneline --graph'\n",
     "graph\n",
+    "git merge origin/main\n",
+    "graph\n",
+    "```\n",
     "\n",
-    "**Synchronize git local folder with remote folder on GitHub:** \\\n",
-    "git add * \\\n",
-    "git commit -m \"message to explain commit\" \\\n",
-    "graph \\\n",
-    "git push origin main \\\n",
-    "graph\n"
+    "- **Update your Github repository based on your local repository:** \n",
+    "```bash\n",
+    "git add * \n",
+    "git commit -m \"message to explain commit\"\n",
+    "graph \n",
+    "git push origin main \n",
+    "graph\n",
+    "```"
    ]
   },
   {
@@ -96,6 +214,7 @@
    "id": "edd34488-e440-4f79-b2c2-7d843d491e03",
    "metadata": {},
    "source": [
+    "<a id='section4'></a>\n",
     "## 4. Setup a virtual machine on your laptop"
    ]
   },
@@ -103,6 +222,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ad9c2bd5-268f-4dd5-8a8e-6fd0ccd68237",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c12be31d-73cb-40f3-947d-63859f36853b",
    "metadata": {},
    "outputs": [],
    "source": []
