--- a/Tutorial_1_NewMember.ipynb
+++ b/Tutorial_1_NewMember.ipynb
@@ -14,7 +14,7 @@
     "2. [New account to access Narval's compute nodes](#scrollTo=3877d880-4c49-4093-9b69-3cdfe6462132) \\\n",
     "    a) [Create an account on GitHub and Compute Canada Database (CCDB)](#scrollTo=3877d880-4c49-4093-9b69-3cdfe6462132) \\\n",
     "    b) [Configure your ssh connexion to Narval cluster and GitHub repository](#scrollTo=80d1a788-1996-4b38-8775-1aa50e7cb509) \\\n",
-    "    c) [Basic commands example on a Narval node](#scrollTo=c135a52c-e13a-4f25-84a8-5aacda46bd53)\n",
+    "    c) [Basic commands on a Narval node](#scrollTo=c135a52c-e13a-4f25-84a8-5aacda46bd53)\n",
     "3. [Setup Miniconda, Git, Datalad and Jupyterlab on your laptop](#scrollTo=37d0971e-0a67-499d-b194-3d630dedabfe) \\\n",
     "    a) [Install Miniconda, Git, Datalad and Jupyterlab](#scrollTo=37d0971e-0a67-499d-b194-3d630dedabfe) \\\n",
     "    b) [Basics for Git/Datalad/GitHub in bash](#scrollTo=3efb0745-22dd-4835-9b94-8f3d69387b39)\n",
@@ -28,6 +28,9 @@
    "source": [
     "<a id='scrollTo=be524736-3944-4376-b03c-6b85ffb0eb3e'></a>\n",
     "## 0. MonETS account: Multifactor authentication and VPN setup\n",
+    "- **Get your ID card:** \\\n",
+    "https://www.etsmtl.ca/en/activities-and-services/campus-life/daily-life-ets#Student-card \\\n",
+    "After getting your ID card, send a picture of it to **sylvain.bouix@etsmtl.ca**, so that Sylvain requested you the access to the labs A-3413 and A-3434.\n",
     "\n",
     "- **See the documentation for multifactor authentication:** \\\n",
     "https://portail.etsmtl.ca/\n",
@@ -80,7 +83,7 @@
     "### b) Configure your ssh connexion to Narval cluster and GitHub repository\n",
     "- **Install a toolbox for remote computing:**  \\\n",
     "Ideally, you should have both Windows and Linux/macOS using a [virtual machine](#scrollTo=edd34488-e440-4f79-b2c2-7d843d491e03).  \\\n",
-    "If your on Windows, you can install [**MobaXterm**](https://mobaxterm.mobatek.net/download-home-edition.html).  \\\n",
+    "If you ar on Windows, you can install [**MobaXterm**](https://mobaxterm.mobatek.net/download-home-edition.html).  \\\n",
     "Alternatively, use a terminal or other toolboxes for remote computing like **Putty** (Windows/Linux), **Royal TSX** (Windows/macOS) or **OpenSSH** (Windows/Linux/macOS).\n",
     "  \n",
     "- **Follow the instructions here to set up a ssh key for your CCDB account and GitHub:** \\\n",
@@ -121,7 +124,7 @@
    "source": [
     "\n",
     "<a id='scrollTo=c135a52c-e13a-4f25-84a8-5aacda46bd53'></a>\n",
-    "### c) Basic commands example on a Narval node\n",
+    "### c) Basic commands on a Narval node\n",
     "\n",
     "- **List all the modules that can be loaded, and load a specific version:**\n",
     "```bash\n",
@@ -213,15 +216,16 @@
     "mris_place_surface --i {inputs[0]} --o {outputs} --nsmooth 1 --adgws-in {inputs[1]} --pial --rh --repulse-surf {inputs[0]} --invol {inputs[2]} --seg {inputs[3]} --threads 6 --wm {inputs[4]} --white-surf {inputs[0]}\n",
     "```\n",
     "\n",
-    "- **If you've forgotten to use 'datalad run': Save changes in your dataset locally:** \n",
+    "- **To overwrite files, you sometimes need to unlock them after each backup:** \n",
     "```bash\n",
+    "datalad unlock *\n",
     "mv MyNewFile MyNewFile2\n",
     "datalad status\n",
-    "datalad save -m \"Oups, forgot to use 'datalad run'. This is why:...\"\n",
+    "datalad save -m \"Changed the name to MyNewFile2\"\n",
     "datalad status\n",
     "```\n",
     "\n",
-    "- **On Linux, check tree structure, previous commands and remove the dataset:** \n",
+    "- **On Linux, check tree structure and previous commands, and remove the dataset:** \n",
     "```bash\n",
     "tree #May have to install it\n",
     "tig #Press 'Enter key' to see details and 'q' to exit\n",
@@ -251,7 +255,6 @@
     "```bash\n",
     "jupyter lab #'Ctrl+C' and 'y+Enter' to quit\n",
     "datalad status\n",
-    "datalad unlock * #Unlocked all files before pushing on Github\n",
     "#git add *\n",
     "#git commit -m \"Unnecessary\"\n",
     "datalad save -m \"Explain changes\"\n",
@@ -272,10 +275,10 @@
     "https://www.vmware.com/ca/products/workstation-player.html\n",
     "\n",
     "- **Download an OS image for the future virtual machine:** \\\n",
-    "    **For Linux, you can use version Ubuntu 22.04.3 LTS:** \\\n",
+    "    **For Linux, you can use Ubuntu 22.04.3 LTS:** \\\n",
     "  https://ubuntu.com/download/desktop\n",
     "  \n",
-    "    **For Windows, you can use version 11:** \\\n",
+    "    **For Windows, you can use Windows 11:** \\\n",
     "  https://www.microsoft.com/en-ca/software-download/windows11\n",
     "  \n",
     "  "
