tuto4 web browser

--- a/Tutorial_4_Lab_computers/Tutorial_4_Lab_computers.ipynb
+++ b/Tutorial_4_Lab_computers/Tutorial_4_Lab_computers.ipynb
@@ -16,7 +16,9 @@
   {
    "cell_type": "markdown",
    "id": "d63a5d22-ae7f-4a34-b349-602134bab11d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "<a id='scrollTo=d63a5d22-ae7f-4a34-b349-602134bab11d'></a>\n",
     "## 0. Structure of office computers\n",
@@ -29,13 +31,17 @@
     "There are currently **three usable office computers** available in A-3413: post 2, 4 and 6. \\\n",
     "The operating system is based on Ubuntu 22 LTS. \\\n",
     "Each computer has a **Nvidia RTX A-4000 GPU**. \\\n",
-    "Also, there are **up to two different and separate sessions** by member: **local** and **Miller server** (default).\n",
+    "Also, there are **up to two different and separate sessions** by member: **local** and **Miller server**.\n",
     "\n",
     "- **Local:** \\\n",
-    "Sylvain Bouix and Benoît Verreman have **root privileges**, and the other lab's members don't. \\\n",
-    "`/home/<username>` is the **home directory** (`echo $HOME`).\n",
+    "The `<username>` are `at90180@ens.ad.etsmtl.ca`(Sadaf), `at70870@ens.ad.etsmtl.ca` (Charles), and `at83760@ens.ad.etsmtl.ca` (Kaveh).  \\\n",
+    "`/home/<username>` is the **home directory** (`echo $HOME`). \\\n",
+    "Sylvain Bouix and Benoît Verreman have **root privileges**, and the other lab's members don't.\n",
+    "\n",
     "\n",
     "- **Miller server:** \\\n",
+    "The `<username>` are `at90180`(Sadaf), `at70870` (Charles), and `at83760` (Kaveh).  \\\n",
+    "You can switch to your other session by using `su <username_other_session>`.  \\\n",
     "Each member is part of the group **neuro**. \\\n",
     "As such, they have access to **14 To** of shared memory with **no backup** and **no quota per folder and per user**. \\\n",
     "`/home/ens/<username>` is the **home directory** (`echo $HOME`) for students and RA. \\\n",
@@ -43,7 +49,11 @@
     "`/project/Neuro-IX` is shared and composed of three folders: \\\n",
     "`data` in read-only mode for users, and `software` and `subprojects` in full-rights access for users.  \\\n",
     "Use the commands `ll`, `ls -la` and `df -h` to get informations about the rights and the groups.\n",
-    "\n"
+    "\n",
+    "- **Web browser:** \\\n",
+    "The default web browser is `firefox`. \\\n",
+    "Alternatively, you can use `google-chrome`. \\\n",
+    "Sometimes, you need to ask for `sudo rm /home/ens/<username>/.config/google-chrome/SingletonLock`.\n"
    ]
   },
   {
@@ -80,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
