--- a/Tutorial_3_Narval_CCDB/Tutorial_3_Narval.ipynb
+++ b/Tutorial_3_Narval_CCDB/Tutorial_3_Narval.ipynb
@@ -260,9 +260,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "15bbe489-0d15-4770-bdf3-5f577431c679",
+   "metadata": {},
+   "source": [
+    "### b) FastSurfer container\n",
+    "**For information on FastSurfer, see [Tutorial-2](https://colab.research.google.com/github/Neuro-iX/Tutorials/blob/main/Tutorial_2_Freesurfer/Tutorial_2_Freesurfer.ipynb).**\n",
+    "\n",
+    "\n",
+    "<ins>Example you can try directly in Narval</ins>:\n",
+    "```bash\n",
+    "module load git-annex python/3\n",
+    "source ~/venv_datalad/bin/activate\n",
+    "cd ~/projects/def-sbouix/software/fastsurfer\n",
+    "datalad status\n",
+    "#datalad run -i ~/projects/def-sbouix/software/Freesurfer7.4.1_container/freesurfer741_job.sh -i ~/projects/def-sbouix/software/Freesurfer7.4.1_container/test_freesurfer.sh -m \"Use fs741 with test_freesurfer.sh\" sbatch {inputs[0]} {inputs[1]}\n",
+    "sbatch ~/projects/def-sbouix/software/Freesurfer7.4.1_container/freesurfer741_job.sh ~/projects/def-sbouix/software/Freesurfer7.4.1_container/test_freesurfer.sh\n",
+    "rm ~/projects/def-sbouix/software/Freesurfer7.4.1_container/output_freesurfer*\n",
+    "rm -r ~/projects/def-sbouix/software/Freesurfer7.4.1_container/bert\n",
+    "datalad save -m \"Explain your modifications\"\n",
+    "deactivate\n",
+    "```\n",
+    "The first script (**fastsurfer_job.sh**) is used to execute the second one (**test_fastsurfer.sh**) in a container created based on fastsurfer_gpu.sif. \\\n",
+    "The second script is using the script **/fastsurfer/run_fastsurfer.sh** to do:\n",
+    "- Segmentation of the whole brain using **asegdkt** (FastSurferVINN) (5 min)\n",
+    "- Segmentation of the cerebellum using **cereb** (CerebNet) (5 min)\n",
+    "- Surface reconstruction (60-90 min)\n",
+    "\n",
+    "**You can copy both scripts in your folder and change them to your needs.** \\\n",
+    "They are also available here: https://github.com/Neuro-iX/Tutorials/tree/main/Tutorial_3_Narval_CCDB/scripts \\\n",
+    "The initial sif image comes from [Neurodesk](https://www.neurodesk.org/): https://www.neurodesk.org/docs/getting-started/neurocontainers/\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28507a82-2e53-47f1-8462-627aa3755a28",
+   "id": "11a25b2b-e1df-40ce-a20d-738e849e90f6",
    "metadata": {},
    "outputs": [],
    "source": []
