tuto3: add hyperlink

--- a/Tutorial_3_Narval_CCDB/Tutorial_3_Narval.ipynb
+++ b/Tutorial_3_Narval_CCDB/Tutorial_3_Narval.ipynb
@@ -15,7 +15,9 @@
     "    a) [Storage and file management on Narval](#scrollTo=e4145b57-a17e-479c-8ce7-5fe035809bb0) \\\n",
     "    b) [Datasets in data](#scrollTo=7cb79d37-cc07-4eda-a17f-1c688027f94f)\n",
     "3. [Basic commands on a Narval node](#scrollTo=15fb63eb-8fef-4e63-822f-395cd4ce158f)\n",
-    "4. [SLURM job templates](#scrollTo=d63a5d22-ae7f-4a34-b349-602134bab11d)"
+    "4. [SLURM job templates](#scrollTo=d63a5d22-ae7f-4a34-b349-602134bab11d) \\\n",
+    "    a) [Freesurfer 7.4.1 container](#scrollTo=d63a5d22-ae7f-4a34-b349-602134bab11d) \\\n",
+    "    b) [Fastsurfer container](#scrollTo=15bbe489-0d15-4770-bdf3-5f577431c679)"
    ]
   },
   {
@@ -67,8 +69,6 @@
    "source": [
     "<a id='scrollTo=e4145b57-a17e-479c-8ce7-5fe035809bb0'></a>\n",
     "## 2. Structure and Datasets in Narval\n",
-    "\n",
-    "<a id='scrollTo=e4145b57-a17e-479c-8ce7-5fe035809bb0'></a>\n",
     "### a) Storage and file management on Narval\n",
     "- **Overall structure:** \\\n",
     "See the structure of your `$HOME (~)`:\n",
@@ -264,6 +264,7 @@
    "id": "15bbe489-0d15-4770-bdf3-5f577431c679",
    "metadata": {},
    "source": [
+    "<a id='scrollTo=15bbe489-0d15-4770-bdf3-5f577431c679'></a>\n",
     "### b) FastSurfer container\n",
     "**For information on FastSurfer, see [Tutorial-2](https://colab.research.google.com/github/Neuro-iX/Tutorials/blob/main/Tutorial_2_Freesurfer/Tutorial_2_Freesurfer.ipynb).**\n",
     "\n",
